--- a/agente.html
+++ b/agente.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SisPorta - Agente de Campo</title>
+    <title>SisPorta - Executor</title>
     
     <!-- PWA Manifest -->
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#10b981">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="SisPorta Agente">
+    <meta name="apple-mobile-web-app-title" content="SisPorta Executor">
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -168,7 +168,7 @@
                     <h1 class="text-3xl font-bold text-white flex items-center gap-2">
                         <span class="text-4xl">🚶</span> SisPorta
                     </h1>
-                    <p class="text-gray-400 text-sm">Agente de Campo</p>
+                    <p class="text-gray-400 text-sm">Executor</p>
                 </div>
                 <button onclick="abrirMenu()" class="btn-primary bg-slate-700 hover:bg-slate-600">
                     <i data-lucide="menu" class="w-5 h-5"></i>
@@ -487,7 +487,7 @@
 
             const stats = territorioAtual.estatisticas;
             const confirmMsg = stats.visitadas === stats.total_residencias
-                ? `✅ Território 100% concluído!\n\n📊 ${stats.visitadas} de ${stats.total_residencias} residências visitadas.\n\nDeseja entregar o território ao coordenador?\n\n⚠️ Após a entrega, o território será removido do seu dispositivo.`
+                ? `✅ Território 100% concluído!\n\n📊 ${stats.visitadas} de ${stats.total_residencias} residências visitadas.\n\nDeseja entregar o território ao gestor?\n\n⚠️ Após a entrega, o território será removido do seu dispositivo.`
                 : `⚠️ Território parcialmente concluído\n\n📊 ${stats.visitadas} de ${stats.total_residencias} residências visitadas (${stats.percentual_conclusao.toFixed(1)}%).\n\nDeseja entregar mesmo assim?\n\n⚠️ Após a entrega, o território será removido do seu dispositivo.`;
 
             if (confirm(confirmMsg)) {
