--- a/index.html
+++ b/index.html
@@ -84,41 +84,41 @@
         <!-- Cards de Acesso -->
         <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-12">
             
-            <!-- Supervisor -->
+            <!-- Administrador -->
             <a href="supervisor.html" class="card group">
                 <div class="text-center">
                     <div class="text-6xl mb-4 group-hover:scale-110 transition-transform">👨‍💼</div>
-                    <h2 class="text-2xl font-bold text-pink-400 mb-2">Supervisor</h2>
+                    <h2 class="text-2xl font-bold text-pink-400 mb-2">Administrador</h2>
                     <p class="text-gray-400 text-sm mb-4">Dashboard completo com gráficos e análises</p>
                     <ul class="text-left text-sm text-gray-300 space-y-1">
                         <li>✅ Criar territórios</li>
-                        <li>✅ Gerenciar UBS</li>
+                        <li>✅ Gerenciar Unidade</li>
                         <li>✅ Visualizar progresso</li>
                         <li>✅ Exportar relatórios</li>
                     </ul>
                 </div>
             </a>
 
-            <!-- Coordenador -->
+            <!-- Gestor -->
             <a href="coordenador.html" class="card group">
                 <div class="text-center">
                     <div class="text-6xl mb-4 group-hover:scale-110 transition-transform">🏥</div>
-                    <h2 class="text-2xl font-bold text-orange-400 mb-2">Coordenador</h2>
+                    <h2 class="text-2xl font-bold text-orange-400 mb-2">Gestor</h2>
                     <p class="text-gray-400 text-sm mb-4">Gestão de equipe local e designações</p>
                     <ul class="text-left text-sm text-gray-300 space-y-1">
                         <li>✅ Importar territórios</li>
-                        <li>✅ Gerenciar agentes</li>
+                        <li>✅ Gerenciar executors</li>
                         <li>✅ Compartilhar via link</li>
                         <li>✅ Receber devoluções</li>
                     </ul>
                 </div>
             </a>
 
-            <!-- Agente -->
-            <a href="agente.html" class="card group">
+            <!-- Executor -->
+            <a href="executor.html" class="card group">
                 <div class="text-center">
                     <div class="text-6xl mb-4 group-hover:scale-110 transition-transform">🚶</div>
-                    <h2 class="text-2xl font-bold text-green-400 mb-2">Agente</h2>
+                    <h2 class="text-2xl font-bold text-green-400 mb-2">Executor</h2>
                     <p class="text-gray-400 text-sm mb-4">Interface mobile para trabalho de campo</p>
                     <ul class="text-left text-sm text-gray-300 space-y-1">
                         <li>✅ Importar via link</li>
@@ -171,23 +171,23 @@
                 <div class="flex items-start gap-4">
                     <div class="bg-pink-500 text-white font-bold rounded-full w-12 h-12 flex items-center justify-center flex-shrink-0">1</div>
                     <div>
-                        <h3 class="font-bold text-lg text-pink-400 mb-1">Supervisor cria territórios</h3>
-                        <p class="text-gray-400 text-sm">Define regiões, UBS e residências a serem cobertas</p>
+                        <h3 class="font-bold text-lg text-pink-400 mb-1">Administrador cria territórios</h3>
+                        <p class="text-gray-400 text-sm">Define regiões, Unidade e residências a serem cobertas</p>
                     </div>
                 </div>
 
                 <div class="flex items-start gap-4">
                     <div class="bg-orange-500 text-white font-bold rounded-full w-12 h-12 flex items-center justify-center flex-shrink-0">2</div>
                     <div>
-                        <h3 class="font-bold text-lg text-orange-400 mb-1">Coordenador designa agentes</h3>
-                        <p class="text-gray-400 text-sm">Importa territórios e gera links para enviar aos agentes via WhatsApp</p>
+                        <h3 class="font-bold text-lg text-orange-400 mb-1">Gestor designa executors</h3>
+                        <p class="text-gray-400 text-sm">Importa territórios e gera links para enviar aos executors via WhatsApp</p>
                     </div>
                 </div>
 
                 <div class="flex items-start gap-4">
                     <div class="bg-green-500 text-white font-bold rounded-full w-12 h-12 flex items-center justify-center flex-shrink-0">3</div>
                     <div>
-                        <h3 class="font-bold text-lg text-green-400 mb-1">Agente executa trabalho</h3>
+                        <h3 class="font-bold text-lg text-green-400 mb-1">Executor executa trabalho</h3>
                         <p class="text-gray-400 text-sm">Clica no link, marca residências visitadas e entrega de volta</p>
                     </div>
                 </div>
